# Musikbar

./: .gitignore  GEMINI.md  LICENSE.md  README.md  forge.config.js  package-lock.json  package.json
.github/workflows/: Make.yml
electron/: main.js  preload.js
public/: index.html
src/: index.css  index.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/react/: App.css  App.js  MusicAssistantClient.js  Settings.css  Settings.js
src/react/ErrorBoundary/: ErrorBoundary.js
src/react/MenuBarContainer/: MenuBarContainer.css  MenuBarContainer.js
src/react/api/: tauri.js
