[package]
name = "Musikbar"
version = "2.1.0"
description = "A Mac Menubar app to control Music Assistant."
authors = ["Ulrich Lichtenegger"]
license = "MIT"
repository = "https://github.com/ulilicht/Musikbar"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] } # Enable tray-icon feature
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.5"
image = "0.25.6"
